--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ ncurses = "5.101.0"
 rodio = "0.14.0"
 serde_json = "1.0.66"
 serde = { version = "1.0.127", features = ["derive"] }
+args = "2.2.0"
+getopts = "0.2.21"
