--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ home = "0.5.3"
 ncurses = "5.101.0"
 ndarray = "0.15.3"
 ndarray-rand = "0.14.0" # REMOVE THIS AFTER TESTING
+num-complex = "0.4.0"
 rodio = "0.14.0"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
