--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 args = "2.2.0"
 getopts = "0.2.21"
 home = "0.5.3"
+kira = "0.5.3"
 ncurses = "5.101.0"
 num-complex = "0.4.0"
-rodio = "0.14.0"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
