--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2018"
 
 [dependencies]
 args = "2.2.0"
+audio = "0.2.0-alpha.3"
+cpal = "0.13.4"
 getopts = "0.2.21"
 home = "0.5.3"
-kira = "0.5.3"
 ncurses = "5.101.0"
 num-complex = "0.4.0"
-num_cpus = "1.13.0"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
