--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ audio = "0.2.0-alpha.3"
 cpal = "0.13.4"
 getopts = "0.2.21"
 home = "0.5.3"
+infer = "0.5.0"
 ncurses = "5.101.0"
 num-complex = "0.4.0"
 serde = { version = "1.0.127", features = ["derive"] }
