--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,9 @@ edition = "2018"
 
 [dependencies]
 args = "2.2.0"
-cpal = "0.13.4"
 getopts = "0.2.21"
 home = "0.5.3"
-infer = "0.5.0"
-minimp3 = "0.5.1"
+kira = "0.5.3"
 ncurses = "5.101.0"
 num-complex = "0.4.0"
 serde = { version = "1.0.127", features = ["derive"] }
