--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ home = "0.5.3"
 kira = "0.5.3"
 ncurses = "5.101.0"
 num-complex = "0.4.0"
+ringbuf = "0.2.6"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
