--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2018"
 
 [dependencies]
 args = "2.2.0"
+crossterm = "0.20"
 getopts = "0.2.21"
 home = "0.5.3"
 kira = "0.5.3"
-ncurses = "5.101.0"
 num-complex = "0.4.0"
 ringbuf = "0.2.6"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
+tui = { version = "0.16", default-features = false, features = ['crossterm'] }
