--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2018"
 
 [dependencies]
 args = "2.2.0"
-crossterm = "0.20"
 getopts = "0.2.21"
 home = "0.5.3"
 kira = "0.5.3"
 num-complex = "0.4.0"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
-tui = { version = "0.16", default-features = false, features = ['crossterm'] }
+termion = "1.5"
+tui = "0.16"
