--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 args = "2.2.0"
 getopts = "0.2.21"
+hex = "0.4.3"
 home = "0.5.3"
 kira = "0.5.3"
 num-complex = "0.4.0"
