--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+
 [dependencies]
 args = "2.2.0"
 getopts = "0.2.21"
 hex = "0.4.3"
 home = "0.5.3"
-kira = "0.5.3"
+kira = { path = "src/kira" }
 num-complex = "0.4.0"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
