--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ args = "2.2.0"
 getopts = "0.2.21"
 hex = "0.4.3"
 home = "0.5.3"
-kira = { path = "src/kira" }
+kira = { path = "kira" }
 num-complex = "0.4.0"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
