--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ hex = "0.4.3"
 home = "0.5.3"
 kira = "0.7.0"
 num-complex = "0.4.0"
+rayon = "1.6.1"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
 termion = "1.5.6"
